Retitle section for clarity
Signed-off-by: brian m. carlson <sandals@crustytoothpaste.net>

--- a/presentation.adoc
+++ b/presentation.adoc
@@ -69,7 +69,7 @@ committer brian m. carlson <sandals@crustytoothpaste.net> 1757984541 +0000
 Commit message
 ----
 
-== Limitations
+== Limitations on Interoperability
 
 * Client (or server) can only map data that it has
 ** Mapping a commit requires mapping every previous commit, tree, and blob
