--- a/presentation.adoc
+++ b/presentation.adoc
@@ -1,5 +1,5 @@
 = SHA-256 Interoperability: What's Next?
-:author: brian m. carlson
+:author: brian m. carlson (they/them)
 :source-highlighter: pygments
 :pygments-style: paraiso-dark
 :revealjs_totalTime: 1200
