Note that tags work very similarly to commits
Signed-off-by: brian m. carlson <bk2204@github.com>

--- a/presentation.adoc
+++ b/presentation.adoc
@@ -69,6 +69,11 @@ committer brian m. carlson <sandals@crustytoothpaste.net> 1757984541 +0000
 Commit message
 ----
 
+[.notes]
+--
+* Tags work very similarly
+--
+
 == Limitations on Interoperability
 
 * Client (or server) can only map data that it has
