Note that batched writing for loose object mappings is coming
Signed-off-by: brian m. carlson <bk2204@github.com>

--- a/presentation.adoc
+++ b/presentation.adoc
@@ -113,6 +113,8 @@ Commit message
 
 * Garbage collection and compaction for loose object mappings
 ** Removing unneeded shallow points and partial object mappings
+* Batched writing for loose object mappings
+** Currently one file is written per object, which is inefficient
 * `git fsck` verification of mappings and objects
 
 == What's Next: To Be Written
