Mention only v2 shallow clones and fetches are written
v0 has yet to be implemented and is unlikely to be implemented by
Monday.

Signed-off-by: brian m. carlson <bk2204@github.com>

--- a/presentation.adoc
+++ b/presentation.adoc
@@ -109,12 +109,13 @@ Commit message
 * Fetching and pushing for full clones without submodules
 ** Always keeps data in packs
 * Protocol extensions for mapping objects when pushing and fetching
-** Shallow clones and fetches
+** Shallow clones and fetches for protocol v2
 
 == What's Next: To Be Written
 
 * Lots of tests
 * Various cleanup
+* Shallow clones and fetches for protocol v0
 * Shallow pushes
 * Partial clones
 * Submodule support
